--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,7 +1,14 @@
 .Card {
+    flex: 1;
     border: 3px solid black;
     border-radius: 10px;
     margin: 20px;
+    overflow: hidden;
+    background-color: blueviolet;
+
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
 }
 
 .Card .Footer {
@@ -14,4 +21,5 @@
     background-color: white;
     color: blueviolet;
     padding: 10px 0px;
+    flex: 1;
 }
